@startuml

title __ZSTREAM's Class Diagram__\n

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.creators {
        package sase.evaluation.tree.creators.adaptive.zstream {
          class AdaptiveZStreamTreeTopologyCreator {
              + createTreeTopology()
              - isInvariantBasedAdaptationEnabled()
              - processSingleCandidateTree()
              - createOrImproveInvariant()
              - createTreeInvariantInput()
              - getInvariants()
              - collectTreeInfos()
          }
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.creators {
        package sase.evaluation.tree.creators.adaptive.zstream {
          class TreeInfo {
              + tree : Node
              + cost : Double
              + cardinality : Double
              + size : Integer
              + invariant : Invariant
              + TreeInfo()
              + compareTo()
          }
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.creators {
        package sase.evaluation.tree.creators.adaptive.zstream {
          class TreeInvariantCalculator {
              + calculateInvariantValue()
              - calculateLeftSubTreeCardinality()
              - calculateLeftSubTreeCost()
              - calculateRightSubTreeCardinality()
              - calculateRightSubTreeCost()
          }
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.creators {
        package sase.evaluation.tree.creators.adaptive.zstream {
          class TreeInvariantInput {
              + leftLeafType : EventType
              + rightLeafType : EventType
              + conditions : CNFCondition
              + leftSubTreeCardinality : Double
              + rightSubTreeCardinality : Double
              + leftSubTreeCost : Double
              + rightSubTreeCost : Double
              + TreeInvariantInput()
          }
        }
      }
    }
  }
  

  AdaptiveZStreamTreeTopologyCreator -up-|> ITreeTopologyCreator
  AdaptiveZStreamTreeTopologyCreator +-down- TreeInfo
  TreeInfo -up-|> Comparable
  TreeInfo o-- TreeInfo : leftTreeInfo
  TreeInfo o-- TreeInfo : rightTreeInfo
  TreeInvariantCalculator -up-|> IInvariantCalculator
  TreeInvariantInput o-- TreeInvariantInput : leftPairOfLeaves
  TreeInvariantInput o-- TreeInvariantInput : rightPairOfLeaves


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
